Fix issue with question mark display on mobile devices.

--- a/less/style-basic.less
+++ b/less/style-basic.less
@@ -677,4 +677,7 @@ footer, header {
   
 .filter-wrapper label {
 	margin-left: 10px;
+	@media screen and (max-width: 550px) {
+		font-size: 12px;
+	}	
 }
